# GPC-EduGap-Replication

./: .gitignore  README.md
data/: README.md  data.do
data/CHARLS/: README.md  export.toml  extra.do  main.ipynb  pipe.toml  pyproject.toml  source.toml  tidydata.toml
data/CHARLS/extra/: 子女是否出生在调查省份.dta
data/CHARLS/raw/docs/: to_parquet.sh
data/CHARLS/raw/metafile/: metafile-child2011.csv  metafile-child2013.csv  metafile-child2015.csv  metafile-child2018.csv  metafile-psu.csv  metafile-resp.csv  metafile-transfer2011.csv  metafile-transfer2013.csv  metafile-transfer2015.csv  metafile-transfer2018.csv
data/CSL/: 中国1986年义务教育法.dta
data/OCP/: 省份超生罚款1979_2000.dta
data/中国教育统计年鉴/: 省份幼儿园数2000_2021.dta
result/: table.do  table.docx
